Added comparison benchmarks for throughput with Reactor schedulers